tests/baselines/reference/parserArrowFunctionExpression1.errors.txt
parserArrowFunctionExpression1.ts(1,10): error TS2369: A parameter property is only allowed in a constructor implementation.


==== parserArrowFunctionExpression1.ts (1 errors) ====
    var v = (public x: string) => { };
             ~~~~~~~~~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.